manifests/registry-longhorn.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5000
  selector:
    app: registry
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry
spec:
  selector:
    matchLabels:
      app: registry
  replicas: 1
  template:
    metadata:
      labels:
        app: registry
    spec:
      containers:
        - name: registry
          image: registry:2
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: my-registry-longhorn-volume
              mountPath: /var/lib/registry
      volumes:
        - name: my-registry-longhorn-volume
          persistentVolumeClaim:
            claimName: registry-longhorn-pvc
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: default-registry-basic-auth@kubernetescrd
spec:
  rules:
    - host: registry.${DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: registry
                port:
                  number: 80
  tls:
    - secretName: registry-tls
      hosts:
        - registry.${DOMAIN}
